<resources>
    <string name="app_name">My Application</string>
    <string name="background_image">background image</string>
    <string name="app_logo">app_logo</string>
    <string name="desired_league">Desired League</string>


    <string name="mens">mens</string>
    <string name="womens">womens</string>


    <string name="co_ed">Co-ed</string>
    <string name="next">next</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a</string>

    <string name="beginner">beginner</string>

    <string name="baller">baller</string>
    <string name="button">Button</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>
    <string name="textview">TextView</string>
</resources>